# Data-Structures

./: README.md
2-3-Tree/: a.out  main.c  meson.build  text.txt  tree23.c  tree23.h
4-5-Tree/: main.c  meson.build  shoes.txt  tree45.c  tree45.h
AVL-Tree/: a.out  course.c  course.h  course_subjects.c  course_subjects.h  main.c  meson.build
Binary-Search-Tree/: a.out  course.c  course.h  course_subjects.c  course_subjects.h  main.c
graph/: a.out  custom_algorithm.c  grafoDrawIO  graph3  main  matrix.txt  primeira_segunda  primeira_segunda.c  vertices.txt
